--- a/public/style.css
+++ b/public/style.css
@@ -1,37 +1,61 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 body {
-  height: 100vh;
+	height: 100vh;
+	background-color: #e8e5e5;
 }
 
 h1 {
-  text-align: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
+	text-align: center;
+	padding-block: 3rem;
 }
 
 .container {
-  /* height: 100%; */
-  display: grid;
-  place-content: center;
-  border: 1px solid gray;
-  border-radius: 2rem;
-  padding-block: 1rem;
-  /* margin-inline: 25rem; */
+	height: 100%;
+}
+
+.form {
+	height: max-content;
+	display: grid;
+	place-content: center;
 }
 
 .uploadContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	gap: 1rem;
+	align-items: center;
+}
+
+p {
+	font-size: 18px;
 }
 
 input {
-  padding: 0.5rem 0.75rem;
-  margin-block: 1rem;
-  font-size: 18px;
+	cursor: pointer;
+	padding: 8px;
+	border: 2px solid gray;
+	border-radius: 4px;
+	margin-block: 8px;
+}
+
+input > #file-upload-button {
+	cursor: pointer;
+}
+
+button {
+	padding: 8px 16px;
+	border-radius: 1rem;
+	cursor: pointer;
+	border: 2px solid gray;
+}
+
+button:hover {
+	transform: scale(1.05);
+	background: #000;
+	color: white;
+	border: 2px solid white;
 }
